# infer-license

./: .gitignore  .vars.ini  MANIFEST.in  Makefile  README.md  dfetch.yaml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
infer_license/: __init__.py  api.py  cmdline.py  types.py
infer_license/licenses/: .dfetch_data.yaml  AGPL-3.0-or-later.txt  BSD-2-Clause.txt  BSD-3-Clause.txt  ISC.txt  MIT-0.txt  X11.txt
infer_license/tests/: __init__.py  __main__.py  api.py  cmdline.py  types.py
