[metadata]
name = infer-license
description = A script to guess licenses based on text
long_description = file: README.md
long_description_content_Type = text/markdown
license = MIT
url = https://github.com/python-packaging/infer-license
author = Tim Hatch
author_email = tim@timhatch.com
#license_files = LICENSE

[options]
packages = infer_license
setup_requires =
    setuptools_scm

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
