[metadata]
name = infer-license
description = A script to guess licenses based on text
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/infer-license/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = infer_license
setup_requires =
    setuptools_scm < 7 ; python_version < '3.8'
    setuptools_scm >= 8; python_version >= '3.8'
    setuptools >= 38.3.0
python_requires = >=3.6
install_requires =
  dataclasses >= 0.7; python_version < '3.7'
  importlib_resources; python_version < '3.7'
include_package_data = true

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = infer_license/*
omit = infer_license/tests/*

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True

[tool:pytest]
python_files = infer_license/tests/*.py
addopts = --ignore=infer_license/tests/__main__.py

[tox:tox]
envlist = py36, py37, py38

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make test
    make lint
    infer_license LICENSE
setenv =
    COVERAGE_FILE={envdir}/.coverage
    MYPY_CACHE_DIR={envdir}/.mypy_cache

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88

[options.package_data]
infer_license =
  py.typed
