[metadata]
name = infer-license
description = A script to guess licenses based on text
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/infer-license/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = infer_license
setup_requires =
    setuptools_scm >= 8
    setuptools >= 65
python_requires = >=3.10
install_requires =
  dataclasses >= 0.7; python_version < '3.7'
  importlib_resources; python_version < '3.7'
include_package_data = true

[options.extras_require]
dev =
    black == 23.12.1
    checkdeps == 0.0.2
    flake8 == 7.0.0
    mypy == 1.8.0
    tox == 4.12.1
    twine == 4.0.2
    ufmt == 2.3.0
    usort == 1.0.7
    wheel == 0.42.0
test =
    coverage >= 6

[options.entry_points]
console_scripts =
    infer_license=infer_license.cmdline:main

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = infer_license/*
omit = infer_license/tests/*

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True

[tool:pytest]
python_files = infer_license/tests/*.py
addopts = --ignore=infer_license/tests/__main__.py

[tox:tox]
envlist = py{310,311,312}, coverage

[testenv]
deps = .[test]
allowlist_externals = make
commands =
    make test
    make lint
    infer_license LICENSE
setenv =
    MYPY_CACHE_DIR={envdir}/.mypy_cache
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}

[testenv:coverage]
deps = coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine
    coverage report
depends =
    py{310,311,312}

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88

[options.package_data]
infer_license =
  py.typed
